<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/school_24dp"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/matriculaAlumnoFragment"
            android:icon="@drawable/icon_aniadir_24dp"
            android:title="@string/menu_matricular" />
        <item
            android:id="@+id/borrarFragment"
            android:icon="@drawable/icon_modificar_24dp"
            android:title="@string/menu_borrar" />
    </group>

    <item android:title="@string/menu_listados">
        <menu>
            <item
                android:id="@+id/listarFragment"
                android:icon="@drawable/icon_listar_24dp"
                android:title="@string/menu_listar" />
        </menu>
    </item>
</menu>