<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.MatriculaAlumnoFragment" >

    <TextView
        android:id="@+id/txtMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txt_matricula"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTxtDniMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ed_txt_dni"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMatricula" />

    <EditText
        android:id="@+id/edTxtNombreMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ed_txt_nombre"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtDniMatricula" />

    <EditText
        android:id="@+id/edTxtApellidosMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ed_txt_apellidos"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtNombreMatricula" />

    <Button
        android:id="@+id/btCancelarMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="463dp" />

    <Button
        android:id="@+id/btAceptarMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_aceptar"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="463dp" />

</androidx.constraintlayout.widget.ConstraintLayout>